--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,35 +27,56 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   get_it: ^7.7.0
+
   hydrated_bloc: ^9.1.5
+
   path_provider: ^2.1.4
+
   flutter_bloc: ^8.1.6
+
   dartz: ^0.10.1                      # For Using Either
+
   firebase_core: ^2.24.2
+
   firebase_auth: ^4.16.0
+
   cloud_firestore: ^4.14.0
+
   flutter_svg: ^2.0.10+1
-  appwrite: ^13.0.0
+
+  appwrite: ^13.0.0                 # Backend
+
+  go_router: ^14.2.7                # Navigation
+
+  internet_connection_checker: ^2.0.0
+
+  get_storage: ^2.1.1
 
   # just_audio: ^0.9.37
+
   # just_audio_windows: ^0.2.1
 
   # equatable: ^2.0.5                   # For comparing dart objects
-  intl: ^0.19.0                       # For handling language and time
-  # floor: ^1.5.0                       # Database
-  # retrofit: ^3.0.1                    # Make request to api
-  # flutter_hooks: ^0.18.3              # Hooks
-  cached_network_image: ^3.4.1        # Cached Image
 
+  intl: ^0.19.0                       # For handling language and time
+
+  # floor: ^1.5.0                       # Database
+
+  # retrofit: ^3.0.1                    # Make request to api
+
+  # flutter_hooks: ^0.18.3              # Hooks
+
+  cached_network_image: ^3.4.1        # Cached Image
 
 
 dev_dependencies:
