changed edit to rich text using quill and updated home list. Bypassing view screen until i can make editing disabled

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
 
   flutter_colorpicker: ^1.1.0
 
+  flutter_quill: ^10.5.14
+
   # just_audio: ^0.9.37
 
   # just_audio_windows: ^0.2.1
