--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Require permission to record audio for speech to text conversion</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Require permission to record audio for speech to text conversion</string>
 </dict>
 </plist>
