--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,12 @@ dependencies:
 
   flutter_quill: ^10.5.14
 
+  speech_to_text: ^7.0.0
+
+  avatar_glow: ^3.0.1
+
+  clipboard: ^0.1.3
+
   # just_audio: ^0.9.37
 
   # just_audio_windows: ^0.2.1
