--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -62,5 +62,7 @@
 	<string>Require permission to record audio for speech to text conversion</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Require permission to record audio for speech to text conversion</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Require permission to use bluetooth for audio output</string>
 </dict>
 </plist>
