--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,15 +78,15 @@ dependencies:
 
   clipboard: ^0.1.3
 
-  fluttertoast: ^8.2.8
+  record: ^5.1.2
 
-  # just_audio: ^0.9.37
+  just_audio: ^0.9.37
 
-  # just_audio_windows: ^0.2.1
+  just_audio_windows: ^0.2.1
 
   # equatable: ^2.0.5                   # For comparing dart objects
 
-  intl: ^0.19.0                       # For handling language and time
+  intl: ^0.19.0                         # For handling language and time
 
   # floor: ^1.5.0                       # Database
 
