--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,12 @@ dependencies:
 
   just_audio_windows: ^0.2.1
 
+  shimmer: ^2.0.0
+
+  persistent_bottom_nav_bar: ^6.2.1
+
+  translator: ^1.0.0
+
   # equatable: ^2.0.5                   # For comparing dart objects
 
   intl: ^0.19.0                         # For handling language and time
